--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -15,8 +15,10 @@ jobs:
     name: install wiz
     steps:
       - name: install wiz
-        run:     curl -o wizcli https://downloads.wiz.io/wizcli/latest/wizcli-linux-amd64
+        run: curl -o wizcli https://downloads.wiz.io/wizcli/latest/wizcli-linux-amd64
+      - name: make wiz executable
         run: chmod +x wizcli
+      - name: move wiz to /usr/local/bin
         run: sudo mv wizcli /usr/local/bin/
       - name: check wiz
         run: wiz --version
