--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -19,7 +19,9 @@ jobs:
       - name: make wiz executable
         run: chmod +x wizcli
       - name: move wiz to /usr/local/bin
-        run: sudo mv wizcli /usr/local/bin/
+        run: sudo mv wizcli /usr/local/bin/wiz
+      - name: add /usr/local/bin to PATH
+        run: echo "/usr/local/bin" >> $GITHUB_PATH
       - name: check wiz
         run: wiz --version
 
@@ -27,10 +29,14 @@ jobs:
     runs-on: ubuntu-latest
     name: install terraform
     steps:
-      - name: install terraform
+      - name: download terraform
         run: curl -o terraform.zip https://releases.hashicorp.com/terraform/1.5.5/terraform_1.5.5_linux_amd64.zip
-      - name: install terraform
+      - name: extract terraform
         run: unzip terraform.zip
+      - name: move terraform to /usr/local/bin
+        run: sudo mv terraform /usr/local/bin/
+      - name: add /usr/local/bin to PATH
+        run: echo "/usr/local/bin" >> $GITHUB_PATH
       - name: check terraform
         run: terraform --version
 
