subbed in tf action

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -10,83 +10,47 @@ permissions:
   pull-requests: write
 
 jobs:
-  install-wiz:
+  terraform:
     runs-on: ubuntu-latest
-    name: install wiz
-    steps:
-      - name: install wiz
-        run: curl -o wizcli https://downloads.wiz.io/wizcli/latest/wizcli-linux-amd64
-      - name: make wiz executable
-        run: chmod +x wizcli
-      - name: move wiz to /usr/local/bin
-        run: sudo mv wizcli /usr/local/bin/wiz
-      - name: add /usr/local/bin to PATH
-        run: echo "/usr/local/bin" >> $GITHUB_PATH
-      - name: check wiz
-        run: wiz version
-
-  install-terraform:
-    runs-on: ubuntu-latest
-    name: install terraform
-    steps:
-      - name: download terraform
-        run: curl -o terraform.zip https://releases.hashicorp.com/terraform/1.5.5/terraform_1.5.5_linux_amd64.zip
-      - name: extract terraform
-        run: unzip terraform.zip
-      - name: move terraform to /usr/local/bin
-        run: sudo mv terraform /usr/local/bin/
-      - name: add /usr/local/bin to PATH
-        run: echo "/usr/local/bin" >> $GITHUB_PATH
-      - name: check terraform
-        run: terraform --version
-
-  init-terraform:
-    needs: install-terraform
-    runs-on: ubuntu-latest
-    name: init terraform
+    name: Terraform
     steps:
       - name: checkout repository
         uses: actions/checkout@v4
-      - name: init terraform
+      
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.5.5
+
+      - name: Terraform Init
         run: terraform init
-
-  validate-terraform:
-    needs: install-terraform
-    runs-on: ubuntu-latest
-    name: validate terraform
-    steps:
-      - name: checkout repository
-        uses: actions/checkout@v4
-      - name: validate terraform
+      
+      - name: Terraform Format
+        run: terraform fmt -check
+      
+      - name: Terraform Validate
         run: terraform validate
 
-  format-terraform:
-    needs: validate-terraform
-    runs-on: ubuntu-latest
-    name: format terraform
-    steps:
-      - name: checkout repository
-        uses: actions/checkout@v4
-      - name: format terraform
-        run: terraform fmt
-
-  output-tfplan:
-    needs: format-terraform
-    runs-on: ubuntu-latest
-    name: output tfplan
-    steps:
-      - name: checkout repository
-        uses: actions/checkout@v4
-      - name: output tfplan
-        run: terraform plan -out=tfplan.json && terraform show -json plan.tfplan
+      - name: Terraform Plan
+        run: terraform plan -out=tfplan.json
+      
+      - name: Show Plan
+        run: terraform show -json tfplan.json
 
   wiz-cicd-scan:
-    needs: output-tfplan
+    needs: terraform
     runs-on: ubuntu-latest
     name: wiz cicd scan
     steps:
       - name: checkout repository
         uses: actions/checkout@v4
+      
+      - name: install wiz
+        run: |
+          curl -o wizcli https://downloads.wiz.io/wizcli/latest/wizcli-linux-amd64
+          chmod +x wizcli
+          sudo mv wizcli /usr/local/bin/wiz
+          
       - name: run wiz cicd scan
         run: wiz scan terraform tfplan.json --fail-on-critical --fail-on-high
 
