Add checkout step to GitHub Actions workflow

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -6,6 +6,8 @@ jobs:
   push:
     runs-on: ubuntu-latest
     steps:
+    - name: checkout
+      uses: actions/checkout@v4
     - name: first action
       run: echo "Hello World"
 
