--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -61,3 +61,5 @@ jobs:
         run: terraform init
       - name: Terraform Plan
         run: terraform plan -out=plan.tfplan
+        env:
+          TF_LOG: DEBUG
