--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -67,9 +67,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: plan.tfplan
-          path: plan.tfplan
-
-        
+          path: .
 
   terraform-apply:
     needs: terraform-plan
@@ -89,7 +87,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: plan.tfplan
-          path: plan.tfplan
+          path: .
       - name: Terraform Init
         run: terraform init
       - name: Terraform Apply
