--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -38,6 +38,12 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-region: us-east-1
+          role-to-assume: arn:aws:iam::291847254387:role/GitHub_LabInfra
+          role-session-name: GitHub_LabInfra
       - name: Terraform Init
         run: terraform init
       - name: Terraform Validate
